fix: add margin for message container on mobile view

--- a/src/styles/components/content/sections/_contact-section.scss
+++ b/src/styles/components/content/sections/_contact-section.scss
@@ -62,6 +62,8 @@
     @include input;
   }
   &__message-container {
+    margin-top: $metric-base;
+    width: 100%;
     @include desktop {
       width: 100%;
     }
